SVGを生成しつつ結果画面に表示する仕組みを作った。

--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -1,1 +1,2 @@
-<%= image_tag temporary_image_path(@id) %>
+<%= image_tag temporary_image_path("#{@id}.png") %>
+<%= image_tag temporary_image_path("#{@id}.svg") %>
