--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang='ja'>
   <head>
-    <title>StampExtractor</title>
+    <title>Stamp Extractor | 紙に押されたハンコの画像から背景透過画像を自動生成</title>
+    <meta name="description" content="押されたハンコや手書きのイラストを元に、背景を透過した画像やSVG形式の画像を生成します。必要な画像は一枚だけ、面倒な設定は不要です。">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +11,8 @@
     <%= favicon_link_tag "favicon.ico" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <%= yield :canonical %>
   </head>
 
   <body>
