--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,8 @@
     <%= yield :canonical %>
   </head>
 
-  <body>
-    <main class="container mx-auto mt-28 px-5 flex">
+  <body class='bg-slate-50'>
+    <main class="container mx-auto my-28 px-5 lg:px-32 xl:px-64 2xl:px-96 text-gray-900">
       <%= yield %>
     </main>
   </body>
