OpenGraphの情報を整えた。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,16 @@
   <head>
     <title>Stamp Extractor | 紙に押されたハンコの画像から背景透過画像を自動生成</title>
     <meta name="description" content="押されたハンコや手書きのイラストを元に、背景を透過した画像やSVG形式の画像を生成します。必要な画像は一枚だけ、面倒な設定は不要です。">
+    <meta property="og:url" content="https://stamp-extractor.herokuapp.com/" >
+    <meta property="og:title" content="Stamp Extractor | 紙に押されたハンコの画像から背景透過画像を自動生成" >
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="押されたハンコや手書きのイラストを元に、背景を透過した画像やSVG形式の画像を生成します。必要な画像は一枚だけ、面倒な設定は不要です。" >
+    <%= tag.meta property: 'og:image', content: asset_url('og-image.png') %>
+    <meta property="og:site_name" content="Stamp Extractor | 紙に押されたハンコの画像から背景透過画像を自動生成" >
+    <meta property="og:locale" content="ja_JP" >
+    <meta name="twitter:card" content="summary_large_image" >
+    <meta name="twitter:site" content="@yamat47" >
+    <meta name="twitter:creator" content="@yamat47" >
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
