HerokuではなくFly.ioを使ってデプロイしていることをコードにも反映した。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title>Stamp Extractor | 紙に押されたハンコの画像から背景透過画像を自動生成</title>
     <meta name="description" content="押されたハンコや手書きのイラストを元に、背景を透過した画像やSVG形式の画像を生成します。必要な画像は一枚だけ、面倒な設定は不要です。">
-    <meta property="og:url" content="https://stamp-extractor.herokuapp.com/" >
+    <meta property="og:url" content="https://stamp-extractor.fly.dev/" >
     <meta property="og:title" content="Stamp Extractor | 紙に押されたハンコの画像から背景透過画像を自動生成" >
     <meta property="og:type" content="website">
     <meta property="og:description" content="押されたハンコや手書きのイラストを元に、背景を透過した画像やSVG形式の画像を生成します。必要な画像は一枚だけ、面倒な設定は不要です。" >
