--- a/app/views/roots/show.html.erb
+++ b/app/views/roots/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :canonical do %>
-  <link rel='canonical' href='https://stamp-extractor.herokuapp.com/' >
+  <link rel='canonical' href='https://stamp-extractor.fly.dev/' >
 <% end %>
 
 <h1 class='mb-24 text-5xl font-bold text-center'>Stamp Extractor</h1>
