--- a/app/views/results/show.html.erb
+++ b/app/views/results/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :canonical do %>
-  <link rel='canonical' href='https://stamp-extractor.herokuapp.com/results/<%= @id %>' >
+  <link rel='canonical' href='https://stamp-extractor.fly.dev/results/<%= @id %>' >
 <% end %>
 
 <h1 class='mb-24 text-5xl font-bold text-center'>お待たせしました！</h1>
